src/snapshots/tests__tests::test_integer-2.snap
---
created: "2019-06-11T12:13:10.586739123Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
"123"
