src/snapshots/tests__tests::test_integer.snap
---
created: "2019-06-11T12:13:10.579721264Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
"0"
