src/snapshots/tests__tests::test_literal-2.snap
---
created: "2019-06-11T12:13:10.591302616Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
NegatedLiteral(
    Predicate(
        LowerWord(
            "p"
        ),
        []
    )
)
