src/snapshots/tests__tests::test_literal.snap
---
created: "2019-07-19T14:53:15.893770493Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Literal(
    Proposition(
        LowerWord(
            "p"
        )
    )
)
