src/snapshots/tests__tests::test_lower_word.snap
---
created: "2019-06-11T12:13:10.585347560Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
"x"
