src/snapshots/tests__tests::test_name-2.snap
---
created: "2019-06-11T12:13:10.596513950Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
SingleQuoted(
    "\'single quoted\'"
)
