src/snapshots/tests__tests::test_name-3.snap
---
created: "2019-06-11T12:13:10.605204498Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Integer(
    "123"
)
