src/snapshots/tests__tests::test_name.snap
---
created: "2019-06-11T12:13:10.586674273Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
LowerWord(
    "lower_word2"
)
