src/snapshots/tests__tests::test_name_list.snap
---
created: "2019-06-11T12:13:10.590450882Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
[
    LowerWord(
        "name"
    ),
    SingleQuoted(
        "\'name\'"
    ),
    Integer(
        "123"
    )
]
